# undeleter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.example.yml  install_deps.sh  install_service.sh  uninstall_service.sh
src/: main.cpp
